VL - needs small fix on mobile table

--- a/src/main/resources/static/css/vias_league.css
+++ b/src/main/resources/static/css/vias_league.css
@@ -401,9 +401,7 @@ select option:hover {
 }
 
 table #gold_small {
-    /*
-    width: 1000px;
-    */
+    width: 45px;
 }
 
 table .circle {
